--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-, "src/components/SingleProject.vue"  ],
+, "src/components/SingleProject.vue", "src/views/FreelanceManager.vue"  ],
   "exclude": [
     "node_modules"
   ]
