--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-FIREBASE_API_KEY=AIzaSyAjZU0USQvlg7lK-BeH_k7TxOoGeULXgSA
-FIREBASE_DOMAIN=freelance-manager-46b0c.firebaseapp.com
-FIREBASE_PROJECT_ID=freelance-manager-46b0c
-FIREBASE_STORAGE_BUCKET=freelance-manager-46b0c.appspot.com
-FIREBASE_SENDER_ID=1033534578807
-FIREBASE_APP_ID=1:1033534578807:web:214aca8e6e0f89140a6672
-FIREBASE_MEASUREMENT_ID=G-26JN0W4MMD
+VUE_APP_FIREBASE_API_KEY=AIzaSyAjZU0USQvlg7lK-BeH_k7TxOoGeULXgSA
+VUE_APP_FIREBASE_DOMAIN=freelance-manager-46b0c.firebaseapp.com
+VUE_APP_FIREBASE_PROJECT_ID=freelance-manager-46b0c
+VUE_APP_FIREBASE_STORAGE_BUCKET=freelance-manager-46b0c.appspot.com
+VUE_APP_FIREBASE_SENDER_ID=1033534578807
+VUE_APP_FIREBASE_APP_ID=1:1033534578807:web:214aca8e6e0f89140a6672
+VUE_APP_FIREBASE_MEASUREMENT_ID=G-26JN0W4MMD
+
+VUE_APP_USER_ID=tY4nqkPeyJdb3G1975qhthEc7CG2
