--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint --fix",
-    "server": "json-server --watch data/db.json"
+    "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
-    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "firebase": "^8.8.0",
